--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version="1.0.209" }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+reqwest = "0.12.7"
+tokio = { version = "1.39.3", features = ["macros"] }
